compiler/testData/diagnostics/tests/objects/ObjectsInheritance.jet
//+JDK

package toplevelObjectDeclarations

object CObj {}

object DOjb : <!SUPERTYPE_NOT_INITIALIZED_DEFAULT, FINAL_SUPERTYPE!>CObj<!> {}
